--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				</div>
 			</div>
 		</section>
-		<script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/chords.js"></script>
 		<script src="js/script.js"></script>
